[package]
name = "mmo_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }

# sans ça, le "dynamic_linking" fail parce que :
# note: LINK : fatal error LNK1189: limite de 65535 objets dépassée pour la bibliothèque
#
# https://bevy.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3