[package]
name = "mmo_dedicated_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
# rand_core = "0.10"
# bevy_rand = "0.14"
# bevy_prng = { version = "0.14", features = ["chacha20", "wyrand"] }
# rand = "0.10.1"
game_sockets = { path = "../game_sockets" }

[dependencies.uuid]
version = "1.23.1"
# Lets you generate random UUIDs
features = [
    "v4",
]