[package]
name = "mmo_gatekeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
