[package]
name = "mmo_orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
# rand_core = "0.10"
# bevy_rand = "0.14"
# bevy_prng = { version = "0.14", features = ["chacha20", "wyrand"] }
# rand = "0.10.1"
shared = { path = "../shared/" }
game_sockets = { path = "../game_sockets" }
tokio = { version = "1", features = ["rt", "net", "macros"] }
redis = { version = "1.2.1", features = ["r2d2"] }
bytes = "1.11.1"
r2d2 = "0.8"